tests/ip6tables.save
# Generated by ip6tables-save v1.4.21 on Sat Oct  3 20:37:22 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [16276:1878839]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -d fe80::/64 -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -p tcp -m multiport --dports 22 -j ACCEPT
-A INPUT -j KIB_INPUT
-A INPUT -p udp -j REJECT --reject-with icmp6-port-unreachable
-A INPUT -j REJECT --reject-with icmp6-port-unreachable
-A INPUT -d ::1/128 ! -i lo -j DROP
-A FORWARD -j KIB_FORWARD
-A FORWARD -j REJECT --reject-with icmp6-adm-prohibited
-A KIB_FORWARD -i eth0 -o kibpubr -j ACCEPT
-A KIB_FORWARD -o eth0 -i kibpubr -j ACCEPT
-A KIB_INPUT -p ipv6-icmp -j ACCEPT
COMMIT
# Completed on Sat Oct  3 20:37:22 2015
# Generated by ip6tables-save v1.4.21 on Sat Oct  3 20:37:22 2015
*mangle
:PREROUTING ACCEPT [16539:11205314]
:INPUT ACCEPT [16439:11198114]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [16276:1878839]
:POSTROUTING ACCEPT [16449:1899632]
COMMIT
# Completed on Sat Oct  3 20:37:22 2015
# Generated by ip6tables-save v1.4.21 on Sat Oct  3 20:37:22 2015
*raw
:PREROUTING ACCEPT [16539:11205314]
:OUTPUT ACCEPT [16276:1878839]
COMMIT
# Completed on Sat Oct  3 20:37:22 2015
